tests/invalid/annotation_set_assigned_list/main.py
def run_case() -> None:
    s: set[int] = [1, 2]


if __name__ == "__main__":
    run_case()
